# prompt-optimization-pipeline

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  run.py
review/: app.js  index.html  package.json  playwright.config.js  styles.css
review/fixtures/: sample_rollouts.jsonl
review/tests/: review.spec.js
src/pipeline/: __init__.py  config.py  data.py  llm.py  log.py  metric.py  optimize.py  traces.py
src/pipeline/web/: __init__.py  app.py  run_manager.py  store.py
src/pipeline/web/static/: app.js  index.html  styles.css
