[project]
name = "prompt-optimization-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gepa>=0.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tqdm>=4.68.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]
